Add text to webpage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>the slider dance 2</title>
+    <title>The Mandelbrot Set</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.12/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.12/addons/p5.dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.12/addons/p5.sound.js"></script>
@@ -14,6 +14,8 @@
   </style>
 </head>
   <body>
+    
+    <h1> I done made a mandelbrot.</h1>
  
 
   </body>
